src/tests/testfiles/binary-operators/12.txt
testfiles/binary-operators/12.c:2:9: error: invalid operands to comparison '<' (have 'float' and 'char *')
1.0 < "a";
    ^
